# pomodoro-app-rs

./: Cargo.toml  LICENSE  README.md
apps/pomodoro-tui/: Cargo.toml
apps/pomodoro-tui/src/: app.rs  main.rs  ui.rs
crates/pomodoro-core/: Cargo.toml
crates/pomodoro-core/src/: config.rs  history.rs  lib.rs  session.rs  timer.rs
crates/pomodoro-platform/: Cargo.toml
crates/pomodoro-platform/src/: lib.rs  notification.rs  storage.rs  time.rs
docs/: IMPLEMENTATION_PLAN.md
