[package]
name = "pomodoro-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
pomodoro-core = { path = "../pomodoro-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
